--- a/index.html
+++ b/index.html
@@ -16,18 +16,27 @@
         * {
             font-family: "Manrope", sans-serif;
         }
-
-        @import "tailwindcss";
     </style>
 </head>
 
 <body>
-    <section>
-        <div class="banner-left">
-            <h1>It's good
-                tea time at The Tea House</h1>
+    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto">
+        <div class="banner-left space-y-[30px]">
+            <h1 class="text-[80px] font-bold">It's good <br>
+                tea time at The <br> Tea House</h1>
+              <p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+              <button class="py-2 px-4 rounded-md text-white bg-linear-to-r from-[#ff8938] to-[#ff0000]  font-semibold">Explore More <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right-long"></i></span></button>
         </div>
-        <div class="banner-right"></div>
+        <div class="banner-right flex justify-end items-end relative">
+            <img src="./images/banner.png" alt="">
+            <div class="bg-white rounded-xl shadow-2xl flex justify-center gap-2 items-center px-[25px] py-[15px] w-[250px] absolute bottom-[15px] left-[220px]">
+                <img src="./images/star.png" alt="">
+                <div>
+                    <h2 class="font-bold text-2xl">5.00</h2>
+                    <p>Trust Pilot Ratings</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
