--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@
             </div>
         </div>
     </section>
+    <section class="container mx-auto my-[90px]">
+        <div class="text-center max-w-[65%] mx-auto mb-[50px]">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="text-[#777777] font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-2">
+            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+                <img src="./images/tea-1.png" class="mx-auto mb-4" alt="">
+                <h3 class="font-semibold text-xl">Milk Tea</h3>
+                <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+                <img src="./images/tea-2.png" class="mx-auto mb-4" alt="">
+                <h3 class="font-semibold text-xl">Black Tea</h3>
+                <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+                <img src="./images/tea-3.png" class="mx-auto mb-4" alt="">
+                <h3 class="font-semibold text-xl">Lemon Tea</h3>
+                <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+                <img src="./images/tea-4.png" class="mx-auto mb-4" alt="">
+                <h3 class="font-semibold text-xl">Green Tea</h3>
+                <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
