--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
             </div>
         </div>
     </section>
-    <section></section>
+    <section><div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+                <img src="./images/tea-4.png" class="mx-auto mb-4" alt="">
+                <h3 class="font-semibold text-xl">Green Tea</h3>
+                <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
+            </div></section>
 </body>
 
 </html>
