--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </head>
 
 <body>
-    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto">
+    <section class="grid grid-cols-1 lg:grid-cols-2 container mx-auto">
         <div class="banner-left space-y-[30px]">
-            <h1 class="text-[80px] font-bold">It's good <br>
+            <h1 class="text-6xl sm:text-[80px] font-bold">It's good <br>
                 tea time at The <br> Tea House</h1>
               <p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
               <button class="py-2 px-4 rounded-md text-white bg-linear-to-r from-[#ff8938] to-[#ff0000]  font-semibold">Explore More <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right-long"></i></span></button>
@@ -43,34 +43,48 @@
             <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
             <p class="text-[#777777] font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-2">
-            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-2">
+            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center">
                 <img src="./images/tea-1.png" class="mx-auto mb-4" alt="">
                 <h3 class="font-semibold text-xl">Milk Tea</h3>
                 <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
             </div>
-            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center">
                 <img src="./images/tea-2.png" class="mx-auto mb-4" alt="">
                 <h3 class="font-semibold text-xl">Black Tea</h3>
                 <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
             </div>
-            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center">
                 <img src="./images/tea-3.png" class="mx-auto mb-4" alt="">
                 <h3 class="font-semibold text-xl">Lemon Tea</h3>
                 <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
             </div>
-            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
+            <div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center">
                 <img src="./images/tea-4.png" class="mx-auto mb-4" alt="">
                 <h3 class="font-semibold text-xl">Green Tea</h3>
                 <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
             </div>
         </div>
     </section>
-    <section><div class="rounded-md bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center">
-                <img src="./images/tea-4.png" class="mx-auto mb-4" alt="">
-                <h3 class="font-semibold text-xl">Green Tea</h3>
-                <p class="text-[#777]">Creamer could be replaced by fresh milk</p>
-            </div></section>
+    <section class="container mx-auto grid grid-cols-1 lg:grid-cols-2  gap-8 mb-[90px]">
+       <div class="grid grid-cols-2 grid-rows-3 gap-[30px]">
+        <div class="row-span-1 bg-linear-to-r from-[#ff0000] to-[#ff8938] opacity-10"></div>
+        <div class="row-span-2 flex justify-center items-center bg-[#e6a6231a]">
+            <img src="./images/fresh-1.png" alt="">
+        </div>
+        <div class="row-span-2 flex justify-center items-center bg-[#5776391a]">
+            <img src="./images/fresh-2.png" alt="">
+        </div>
+        <div class="row-span-1 bg-linear-to-r from-[#d9d9d9] to-[#fffffff00]"></div>
+       </div>
+       <div class=" space-y-4">
+          <h2 class="font-extrabold text-[45px]">Great Tea, Freshly <br> Presented</h2>
+          <p class="font-medium text-[#777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h3 class="text-[20px] font-bold">Unique Taste</h3>
+          <p  class="font-medium text-[#777]">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+          <h3 class="text-[20px] font-bold">Premium Quality</h3>
+          <p  class="font-medium text-[#777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+       </div>
+    </section>
 </body>
-
 </html>
