--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
     </section>
     <section class="container mx-auto grid grid-cols-1 lg:grid-cols-2  gap-8 mb-[90px]">
        <div class="grid grid-cols-2 grid-rows-3 gap-[30px]">
-        <div class="row-span-1 bg-linear-to-r from-[#ff0000] to-[#ff8938] opacity-10"></div>
-        <div class="row-span-2 flex justify-center items-center bg-[#e6a6231a]">
+        <div class="rounded-[10px] row-span-1 bg-linear-to-r from-[#ff0000] to-[#ff8938] opacity-10"></div>
+        <div class="rounded-[10px] row-span-2 flex justify-center items-center bg-[#e6a6231a]">
             <img src="./images/fresh-1.png" alt="">
         </div>
-        <div class="row-span-2 flex justify-center items-center bg-[#5776391a]">
+        <div class="rounded-[10px] row-span-2 flex justify-center items-center bg-[#5776391a]">
             <img src="./images/fresh-2.png" alt="">
         </div>
-        <div class="row-span-1 bg-linear-to-r from-[#d9d9d9] to-[#fffffff00]"></div>
+        <div class="rounded-[10px] row-span-1 bg-linear-to-r from-[#d9d9d9] to-[#fffffff00]"></div>
        </div>
        <div class=" space-y-4">
           <h2 class="font-extrabold text-[45px]">Great Tea, Freshly <br> Presented</h2>
@@ -85,6 +85,42 @@
           <h3 class="text-[20px] font-bold">Premium Quality</h3>
           <p  class="font-medium text-[#777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
        </div>
+    </section>
+    <section class="rounded-xl container mx-auto grid grid-cols-1 xl:grid-cols-2 gap-[100px] xl:gap-0 w-full md:w-[1140px]   mb-[90px] bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px]">
+      <div class=" flex items-center">
+         <div class="space-y-4">
+            <h2 class="text-5xl font-bold text-[#f4f4f4]">Meet Our Super <br> Clients</h2>
+         <p class="text-[#f4f4f4] font-medium">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words which don't <br> look even slightly believable. </p>
+         <button class="text-[20px] py-2 px-4 rounded-md bg-white font-semibold"><span class="bg-linear-to-r from-[#ff8938] to-[#ff0000] bg-clip-text text-transparent">Show All</span></button>
+         </div>
+      </div>
+      <div class="relative pl-[100px]">
+         <div class="bg-white rounded-lg p-6 w-[250px] md:w-[433px] absolute left-[40px] top-[100px] z-50">
+          <p class="text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h3 class="font-bold text-2xl">Ilham Yuda</h3>
+          <h4 class="text-[#777] font-semibold">Businessman</h4>
+          <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+            <img src="./images/client.png" alt="" >
+          </div>
+          <img src="./images/circles.png" alt="" class="absolute right-4 bottom-4">
+      </div>
+         <div class="bg-white rounded-lg p-6 w-[250px] md:w-[433px] relative  mb-[50px] opacity-20">
+          <p class="text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h3 class="font-bold text-2xl">Ilham Yuda</h3>
+          <h4 class="text-[#777] font-semibold">Businessman</h4>
+          <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+            <img src="./images/client.png" alt="" >
+          </div>
+      </div>
+         <div class="bg-white rounded-lg p-6 w-[250px]  md:w-[433px] relative opacity-20">
+          <p class="text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h3 class="font-bold text-2xl">Ilham Yuda</h3>
+          <h4 class="text-[#777] font-semibold">Businessman</h4>
+          <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+            <img src="./images/client.png" alt="" >
+          </div>
+      </div>
+      </div>
     </section>
 </body>
 </html>
